--- a/docs/翰云数据库语法手册.md
+++ b/docs/翰云数据库语法手册.md
@@ -9,11 +9,11 @@
 | 类型名称       | 取值                                        |
 | -------------- | :------------------------------------------ |
 | INTEGER        | $-2^{31}$~ $2^{31}$-1                       |
-| LONG           | -$2^{63}$ ~ $2^{63}$-1                      |
+| LONG           | $-2^{63}$ ~ $2^{63}$-1                      |
 | AUTO_INCREMENT | 0 ~ $2^{63}$-1                              |
-| NUMBER(P,S)    | -$10^{38}$ ~ $10^{38}$                      |
-| FLOAT          | -$2^{128}$ ~ $2^{128}$                      |
-| DOUBLE         | -$2^{1024}$ ~ $2^{1024}$                    |
+| NUMBER(P,S)    | $-10^{38}$ ~ $10^{38}$                      |
+| FLOAT          | $-2^{128}$ ~ $2^{128}$                      |
+| DOUBLE         | $-2^{1024}$ ~ $2^{1024}$                    |
 | BOOLEAN        | TRUE 或 FALSE                               |
 | CHAR(N)        | N字节文本数据，N<=4096，长度不足N后续补空格 |
 | VARCHAR(N)     | 最长N字节文本数据，N<=132786                |
